# cookidoo-cli

./: README.md  pyproject.toml
src/cookidoo_cli/: __init__.py  __main__.py  cli.py  const.py  transform.py
src/cookidoo_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_transform.py
