[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cookidoo-cli"
version = "0.1.0"
description = "Production-ready CLI for Cookidoo recipes, shopping lists, and meal planning"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "cookidoo-api>=0.16.0",
  "aiohttp>=3.9,<4.0",
]

[project.scripts]
cookidoo = "cookidoo_cli.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
